# StellarPy-

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
stellarpy/: __init__.py  astronomy.py  orbital.py  rocketry.py
stellarpy/data/: constants.py  planets.py
tests/: test_astronomy.py  test_orbital.py  test_rocketry.py
